<resources>
    <string name="app_name">Event Space</string>
    <string name="accessibility_overflow">Accessibility Overflow</string>
    <string name="trending">Trending</string>
    <string name="space">Space</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile">Profile</string>
    <string name="facebook_app_id">442156039699625</string> <string name="fb_login_protocol_scheme">fb442156039699625</string>
    <string name="spaces">Spaces</string>
    <string name="spaces_lower">spaces</string>
    <string name="filter_string">What events you would like to find?</string>
    <string name="see_all">See all</string>
    <string name="middle_dot" translatable="false">•</string>
    <string name="events">Events</string>
    <string name="see_all_events">See all events</string>
    <string name="search_hint">Spaces, Events or Services</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="privacy">I agree to the terms and privacy policy</string>
    <string name="btn_create">Get Started</string>
    <string name="string_already">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="event_space">Event Space</string>
    <string name="slogan">Awesome Event Booking App</string>
    <string name="sign_in_upcase">SIGN ME IN</string>
    <string name="option_signin">Or continue with</string>
    <string name="string_dont_have">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_send">Send</string>
    <string name="sign_in_or_sign_up_to_do_more_work">Sign in or sign up to do more work</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="user_fullname">Full name</string>
    <string name="user_birthday">Birthday</string>
    <string name="user_format_birthday">dd/mm/yyyy</string>
    <string name="user_gender">Gender</string>
    <string name="user_gender_male">Male</string>
    <string name="user_gender_female">Female</string>
    <string name="user_gender_other">Other</string>
    <string name="user_phonenumber">Phone number</string>
    <string name="user_address">Address</string>
    <string name="btn_save">Save</string>
    <string name="user_balance">Your Balance</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="images">Images</string>
    <string name="detail">Detail</string>
    <string name="services">Services</string>
    <string name="event">Event</string>
    <string name="service">Service</string>
    <string name="email_empty">Email cannot be blank</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="password_empty">Password cannot be blank</string>
    <string name="password_length">"Password must be at least 6 characters long"</string>
    <string name="retype_empty">Retype password cannot be blank</string>
    <string name="retype_match">Retype and password do not match</string>
    <string name="terms_confirm">Please read and confirm our Terms and Privacy</string>
    <string name="fullname_empty">Full Name cannot be blank</string>
    <string name="name_empty">Name can not be blank</string>
    <string name="unknown_name">Unknow Name</string>
    <string name="string_after_leave">Everything will be deleted after you leave !</string>
    <string name="okay_i_know">Okay, I know</string>
    <string name="profile_updated">Profile updated</string>
    <string name="space_management">Space Management</string>
    <string name="service_management">Service Management</string>
    <string name="free">Free</string>
    <string name="plz_sign_in">Please sign in to continue</string>
    <string name="purchase_now">Purchase now</string>
    <string name="not_enough_money">Not enough money to pay</string>
    <string name="sending_data">Sending data...</string>
    <string name="plz_refresh">Data error, please refresh again</string>
    <string name="plz_fill_number">Please fill this field by number</string>
    <string name="number_greater_than_zero">The number must be greater than zero</string>
    <string name="purchase_note">Please bring this identity card when you go to the space .Thank you</string>
    <string name="unit">unit</string>


</resources>
