<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/DarkerBlack">

        <LinearLayout
            android:id="@+id/toolbar_parent"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="65dp"
                android:layout_height="75dp"
                android:paddingTop="28dp"
                android:paddingBottom="28dp"
                app:srcCompat="@drawable/ic_back_button" />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="65dp"
                android:text="Profile Detail"
                android:maxLines="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/FlatWhite"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="start"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:background="@color/DarkerBlack"
                app:riv_border_color="@color/FocusYellowColor"
                app:riv_border_width="2dp"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                app:riv_mutate_background="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:paddingStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_balance"
                    android:textColor="@color/FocusYellowColor"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/txtBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        android:textColor="@color/FocusYellowColor"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_fullname"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_fullname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:singleLine="true"
                android:textColor="@color/FocusYellowColor"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            android:layout_marginTop="8dp"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:singleLine="true"
                android:textColor="@color/FocusYellowColor"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/user_gender"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/rad_group_gender"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">

            <RadioButton
                android:id="@+id/rad_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_gender_male"
                android:textStyle="bold"
                android:textColor="@color/FlatWhite"
                android:textSize="14sp"/>
            <RadioButton
                android:id="@+id/rad_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_gender_female"
                android:textColor="@color/FlatWhite"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <RadioButton
                android:id="@+id/rad_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_gender_other"
                android:textColor="@color/FlatWhite"
                android:textStyle="bold"
                android:textSize="14sp"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_birthday"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_birthday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner_without_border_dark"
            android:singleLine="true"
            android:textColor="@color/FocusYellowColor"
            android:textSize="15sp"
            android:hint="@string/user_format_birthday"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_phonenumber"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"

            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/FocusYellowColor"
                android:textSize="15sp"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="5dp"
            android:text="@string/user_address"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:singleLine="true"
                android:textColor="@color/FocusYellowColor"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/FocusYellowColor"
            android:text="@string/btn_save"
            android:layout_marginTop="8dp"
            android:background="@drawable/google_white_background"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>
