<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#171228">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue_red">
            <requestFocus/>
            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/helvetica_font"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/FlatWhite"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/close"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_fullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:background="@drawable/rounded_corner_without_border_dark"
                    android:drawableStart="@drawable/round_person_24"
                    android:drawablePadding="5dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:hint="@string/full_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_email"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_fullname"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:background="@drawable/rounded_corner_without_border_dark"
                    android:drawableStart="@drawable/round_mail_outline_24"
                    android:drawablePadding="5dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@id/edit_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:background="@drawable/rounded_corner_without_border_dark"
                    android:drawableStart="@drawable/round_lock_24"
                    android:drawablePadding="5dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_retype"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@id/edit_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:background="@drawable/rounded_corner_without_border_dark"
                    android:drawableStart="@drawable/round_lock_24"
                    android:drawablePadding="5dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:hint="@string/retype_password"/>
            </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/chb_terms_privacy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edit_retype"
                    app:layout_constraintStart_toStartOf="@id/edit_retype"
                    app:layout_constraintEnd_toEndOf="@id/edit_retype"
                    android:text="@string/privacy"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:textColor="@color/event_background_color"
                    android:textStyle="bold"/>

            <TextView
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/chb_terms_privacy"
                android:background="@drawable/google_white_background"
                android:gravity="center"
                android:text="@string/btn_create"
                android:textColor="#ff1361"
                android:textSize="17sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/already"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                app:layout_constraintTop_toBottomOf="@id/btn_create"
                app:layout_constraintStart_toStartOf="@id/edit_password"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toStartOf="@id/sign_in"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginTop="8dp"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:gravity="center"
                android:text="@string/string_already"
                android:textColor="@color/event_background_color"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                app:layout_constraintTop_toTopOf="@id/already"
                app:layout_constraintBottom_toBottomOf="@id/already"
                app:layout_constraintEnd_toEndOf="@id/edit_password"
                app:layout_constraintStart_toEndOf="@id/already"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/FlatRed"
                android:textSize="16sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/close"
                android:layout_width="100dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/edit_fullname"
                android:src="@drawable/close"
                android:tint="#CCC"
                android:focusable="true"
                android:clickable="true"
                android:padding="30dp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>