<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="0dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#22000000">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/filter_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:visibility="gone"
                tools:visibility="visible">
                <TextView
                    android:id="@+id/filter_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/filter_string"
                    android:textColor="@color/FlatWhite"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/filter_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/filter_title"
                    android:clipToPadding="false"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/filter_see_all"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_circler_event_type"
                    tools:layoutManager="LinearLayoutManager"
                    tools:orientation="horizontal"
                    />
                <TextView
                    android:id="@+id/filter_see_all"
                    android:layout_width="75dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/filter_recycler_view"
                    app:layout_constraintBottom_toBottomOf="@id/filter_recycler_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/see_all"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/FlatWhite"
                    android:layout_margin="6dp"
                    android:background="@drawable/background_item_space_tab"
                    android:textSize="14sp"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_collapseMode="pin"
                android:background="@color/DarkerBlack">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/spaces"
                android:textColor="@color/FlatWhite"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_collapseMode="pin"
                android:gravity="center_vertical"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp" />
            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/space_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                tools:itemCount="0"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/bottom_navigation_parent_height"
                />
        </android.support.v4.widget.SwipeRefreshLayout>
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No spaces for these events :(("
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#666"
            android:visibility="gone"
            />
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>